--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ button{
     border: none;
     outline: none;
     padding: 16px 50px;
-    background: #ff5945;
+    background: #6745ff;
     color:#fff;
     font-size: 16px;
     cursor: pointer;
